socket.io enserido e jogando para database cozinha

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -49,3 +49,14 @@ blockquote{
     color: #fff;
   }
 }
+
+.hora{
+  position: absolute;
+  color: #000;
+  right: 28px;
+  top: -38px;
+  background: #FFED01;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 1px solid white;
+}
