--- a/public/partials/pedidos.html
+++ b/public/partials/pedidos.html
@@ -12,6 +12,7 @@
     <div class="col-md-12">
       <div class="thumbnail pedido" ng-repeat="pedido in pedidos">
         <div class="caption">
+          <h3 class="text-right hora">{{pedido.hora}}</h3>
           <h5><b>Cliente</b>: {{pedido.nome}}</h5>
           <h5><b>Telefone</b>: {{pedido.telefone}}</h5>
           <h5><b>Celular</b>: {{pedido.celular}}</h5>
@@ -22,7 +23,7 @@
           </blockquote>
           <h3 class="text-center area">Valor total: R${{pedido.valor}}</h3>
           <p>
-            <button type="button" class="btn btn-lg btn-default btn-block" ng-click="fazer(pedido)">Ir para cozinha!</a>
+            <button type="button" class="btn btn-lg btn-default btn-block" ng-click="cozinha(pedido)">Ir para cozinha!</a>
           </p>
         </div>
       </div>
@@ -42,6 +43,7 @@
 
       <div class="thumbnail fazer-pedido" ng-repeat="cozinha in cozinhas">
         <div class="caption">
+          <h3 class="text-right hora">{{cozinha.hora}}</h3>
           <h5><b>Cliente</b>: {{cozinha.nome}}</h5>
           <h5><b>Telefone</b>: {{cozinha.telefone}}</h5>
           <h5><b>Celular</b>: {{cozinha.celular}}</h5>
@@ -50,6 +52,7 @@
           <blockquote>
             {{cozinha.pedido}}
           </blockquote>
+          <h3 class="text-center area">Valor total: R${{cozinha.valor}}</h3>
           <p>
             <button type="button" class="btn btn-warning btn-lg btn-block">Pronto para entrega!</a>
           </p>
@@ -73,6 +76,7 @@
 
       <div class="thumbnail entrega-pedido" ng-repeat="entrega in entregas">
         <div class="caption">
+          <h3 class="text-right hora">{{entrega.hora}}</h3>
           <h5><b>Cliente</b>: {{entrega.nome}}</h5>
           <h5><b>Telefone</b>: {{entrega.telefone}}</h5>
           <h5><b>Celular</b>: {{entrega.celular}}</h5>
@@ -81,6 +85,7 @@
           <blockquote>
             {{entrega.pedido}}
           </blockquote>
+          <h3 class="text-center area">Valor total: R${{entrega.valor}}</h3>
           <p>
             <button type="button" class="btn btn-danger btn-lg btn-block">Finalizar pedido!</a>
           </p>
