--- a/public/partials/pedidos.html
+++ b/public/partials/pedidos.html
@@ -1,3 +1,6 @@
+<div class="container">
+  <h4 ng-show="mensagem" class="mensagem-feedback alert alert-success" role="alert"><i class="fa fa-check"></i> {{mensagem}}</h4>
+</div>
 <div class="row">
 
   <div class="col-md-4 col-sm-4">
@@ -87,7 +90,7 @@
           </blockquote>
           <h3 class="text-center area">Valor total: R${{entrega.valor}}</h3>
           <p>
-            <button type="button" class="btn btn-danger btn-lg btn-block">Finalizar pedido!</a>
+            <button type="button" class="btn btn-danger btn-lg btn-block" ng-click="toPedidoSuccess(entrega)">Finalizar pedido!</a>
           </p>
         </div>
       </div>
