--- a/public/partials/pedidos.html
+++ b/public/partials/pedidos.html
@@ -15,7 +15,7 @@
     <div class="col-md-12">
       <div class="thumbnail pedido" ng-repeat="pedido in pedidos">
         <div class="caption">
-          <h3 class="text-right hora">{{pedido.hora}}</h3>
+          <h3 class="text-right hora">{{pedido.hora}} - {{pedido.data}}</h3>
           <h5><b>Cliente</b>: {{pedido.nome}}</h5>
           <h5><b>Telefone</b>: {{pedido.telefone}}</h5>
           <h5><b>Celular</b>: {{pedido.celular}}</h5>
