mudando layout para materialize

--- a/public/partials/site.html
+++ b/public/partials/site.html
@@ -20,6 +20,12 @@
         <input type="text" class="form-control" placeholder="Endereço" ng-model="endereco">
       </div>
       <div class="form-group">
+        <input type="text" class="form-control" placeholder="Bairro" ng-model="bairro">
+      </div>
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Cep" ng-model="cep">
+      </div>
+      <div class="form-group">
         <input type="text" class="form-control" placeholder="Ponto de ref." ng-model="referencia">
       </div>
       <div class="form-group">
