--- a/public/partials/pedidos.html
+++ b/public/partials/pedidos.html
@@ -146,53 +146,55 @@
           <div class="col s12">
               <ul class="collapsible popout" data-collapsible="accordion">
                   <!-- INICIO***** ITEM DO PEDIDO -->
-                  <li>
-                      <h6 class="text-center hora">20:12hs</h6>
+                  <li ng-repeat="pedido in pedidos">
+                      <h6 class="text-center hora">{{pedido.hora}}</h6>
                       <div class="collapsible-header white black-text">
-                          <a href="#modal1" class="secondary-content modal-trigger left">
+                          <a href="#{{pedido._id}}" class="secondary-content modal-trigger left" modal>
                               <i class="fa fa-user"></i>
                           </a>
-                          Tiago Lima
+                          {{pedido.nome}}
                           <br />
-                          <i class="fa fa-phone grey-text"></i>11 2585-2255
+                          <i class="fa fa-phone grey-text"></i>{{pedido.telefone}}
                           <br />
-                          <i class="fa fa-mobile grey-text"></i>11 95885-5588
+                          <i class="fa fa-mobile grey-text"></i>{{pedido.celular}}
                           <br />
-                          <i class="fa fa-map-marker grey-text"></i>Jd.Helena
+                          <i class="fa fa-map-marker grey-text"></i>{{pedido.bairro}}
                       </div>
                       <div class="collapsible-body">
                           <div class="col s12 white">
                             <blockquote class="title">
-                              1 Pizza quatro queijos com borda catupiry, 10 Esfihas, 1 coca cola
+                              {{pedido.pedido}}
                               </blockquote><br/>
 
                               <h5 class="secondary-content red-text">
-                                  <small><b>R$ 24,99</b></small>
+                                  <small><b>R$ {{pedido.valor}}</b></small>
                               </h5>
                           </div>
                       </div>
                       <!-- Modal com as informações do cliente -->
-                      <div id="modal1" class="modal">
+                      <div id="{{pedido._id}}" class="modal">
                           <div class="modal-content">
-                              <h4 class="center">Dados do cliente</h4>
+                              <h4 class="center">Dados do Pedido</h4>
                               <div class="row">
 
                                 <ul class="collection">
-                                  <li class="collection-item">Nome: Tiago Lima</a>
-                                  <li class="collection-item">Telefone: 11 2585-2255</a>
-                                  <li class="collection-item">Celular: 11 98545-5545</a>
-                                  <li class="collection-item">Endereço: Av.Oliveira freire, 55 - Jd.Helena</a>
-                                  <li class="collection-item">Referencia: Ao lado do mercado extra</a>
-                                  <li class="collection-item">Pedido: 1 pizza de calabresa, 1 coca</a>
-                                  <li class="collection-item">Hora: 16:38</a>
-                                  <li class="collection-item">Data: 16/03/2016</a>
-                                  <li class="collection-item right red-text">Valor: R$100</a>
+                                  <li class="collection-item">Nome: {{pedido.nome}}</a>
+                                  <li class="collection-item">Telefone: {{pedido.telefone}}</a>
+                                  <li class="collection-item">Celular: {{pedido.celular}}</a>
+                                  <li class="collection-item">Endereço: {{pedido.endereco}}</a>
+                                  <li class="collection-item">Bairro: {{pedido.bairro}}</a>
+                                  <li class="collection-item">Cep: {{pedido.cep}}</a>
+                                  <li class="collection-item">Referencia: {{pedido.referencia}}</a>
+                                  <li class="collection-item">Hora: {{pedido.hora}}</a>
+                                  <li class="collection-item">Data: {{pedido.data}}</a>
+                                  <li class="collection-item">Pedido: {{pedido.pedido}}</a>
+                                  <li class="collection-item right red-text"><h5><b>R${{pedido.valor}}</b></h5></a>
                                 </ul>
 
                               </div>
                           </div>
                           <div class="modal-footer teal">
-                              <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat white-text">OK</a>
+                              <button class="modal-action modal-close waves-effect waves-green btn-flat white-text">OK</button>
                           </div>
                       </div>
                       <a class="waves-effect waves-light btn full-width"><i class="fa fa-cutlery"></i> ir para cozinha</a>
@@ -224,16 +226,16 @@
 
             <ul class="collapsible popout" data-collapsible="accordion">
                   <!-- INICIO***** ITEM DO PEDIDO -->
-                  <li>
-                      <h6 class="text-center hora">20:12hs</h6>
+                  <li ng-repeat="cozinha in cozinhas">
+                      <h6 class="text-center hora">{{cozinha.hora}}</h6>
                       <div class="collapsible-header active white black-text">
                           <i class="fa fa-user secondary-content"></i>
-                          Tiago Lima
+                          {{cozinha.nome}}
                       </div>
                       <div class="collapsible-body">
                           <div class="col s12 white">
                             <blockquote class="title">
-                              1 Pizza quatro queijos com borda catupiry, 10 Esfihas, 1 coca cola
+                              {{cozinha.pedido}}
                               </blockquote><br/>
                           </div>
                       </div>
@@ -268,20 +270,20 @@
 
             <ul class="collapsible popout" data-collapsible="accordion">
                   <!-- INICIO***** ITEM DO PEDIDO -->
-                  <li>
-                      <h6 class="text-center hora">20:12hs</h6>
+                  <li ng-repeat="entrega in entregas">
+                      <h6 class="text-center hora">{{entrega.hora}}</h6>
                       <div class="collapsible-header active white black-text">
                           <i class="fa fa-user secondary-content"></i>
-                          Tiago Lima
+                          {{entrega.nome}}
                           <br />
-                          <i class="fa fa-phone grey-text"></i>11 2585-2255
+                          <i class="fa fa-phone grey-text"></i>{{entrega.telefone}}
                           <br />
-                          <i class="fa fa-mobile grey-text"></i>11 95885-5588
+                          <i class="fa fa-mobile grey-text"></i>{{entrega.celular}}
                       </div>
                       <div class="collapsible-body">
                           <div class="col s12 white">
                             <blockquote class="title">
-                              Av Oliveira freire, 55 - Jd. Helena
+                              {{entrega.endereco}} - {{entrega.bairro}} - Ref. {{entrega.referencia}} - Cep {{entrega.cep}}
                             </blockquote><br/>
                           </div>
                       </div>
@@ -302,7 +304,7 @@
 
 <script>
 
-  $('.modal-trigger').leanModal();
+  // $('.modal-trigger').leanModal();
 
   $(document).delegate('.open', 'click', function(event){
       $(this).addClass('oppenned');
