autenticação com jwt e passport

--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -9,7 +9,7 @@
         <form>
           <div class="input-field col s12">
             <input id="usuario" type="text" class="validate" ng-model="usuario" required>
-            <label for="usuario">Usuário</label>
+            <label for="usuario">usuario</label>
           </div>
 
           <div class="input-field col s12">
