--- a/public/partials/site.html
+++ b/public/partials/site.html
@@ -34,6 +34,12 @@
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Pedido" ng-model="pedido">
       </div>
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Observações" ng-model="observacoes">
+      </div>
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Forma de pagamento" ng-model="formaPg">
+      </div>
 
       <button type="submit" class="btn btn-primary btn-block">Enviar pedido para o sistema!</button>
     </fieldset>
